Fixed a collector issue